--- a/app/index.html
+++ b/app/index.html
@@ -255,6 +255,7 @@
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link focus" href="#">
+                <span class="sr-only">We're on facebook</span>
                 <svg class="social__icon" width="8" height="15">
                   <use xlink:href="images/sprite.svg#facebook"></use>
                 </svg>
@@ -262,6 +263,7 @@
             </li>
             <li class="social__item">
               <a class="social__link focus" href="#">
+                <span class="sr-only">We're on Twitter</span>
                 <svg class="social__icon" width="18" height="13">
                   <use xlink:href="images/sprite.svg#twitter"></use>
                 </svg>
@@ -269,6 +271,7 @@
             </li>
             <li class="social__item">
               <a class="social__link focus" href="#">
+                <span class="sr-only">We're on instagram</span>
                 <svg class="social__icon" width="15" height="15">
                   <use xlink:href="images/sprite.svg#instagram"></use>
                 </svg>
