--- a/app/post.html
+++ b/app/post.html
@@ -103,6 +103,7 @@
             <ul class="social__list">
               <li class="social__item">
                 <a class="social__link social__link--share focus" href="#">
+                  <span class="sr-only">with facebook</span>
                   <svg class="social__icon" width="8" height="15">
                     <use xlink:href="images/sprite.svg#facebook"></use>
                   </svg>
@@ -110,6 +111,7 @@
               </li>
               <li class="social__item">
                 <a class="social__link social__link--share focus" href="#">
+                  <span class="sr-only">with twitter</span>
                   <svg class="social__icon" width="18" height="13">
                     <use xlink:href="images/sprite.svg#twitter"></use>
                   </svg>
@@ -117,6 +119,7 @@
               </li>
               <li class="social__item">
                 <a class="social__link social__link--share focus" href="#">
+                  <span class="sr-only">with google +</span>
                   <svg class="social__icon" width="17" height="17">
                     <use xlink:href="images/sprite.svg#g+"></use>
                   </svg>
@@ -124,6 +127,7 @@
               </li>
               <li class="social__item">
                 <a class="social__link social__link--share focus" href="#">
+                  <span class="sr-only">with tumblr</span>
                   <svg class="social__icon" width="11" height="17">
                     <use xlink:href="images/sprite.svg#tumblr"></use>
                   </svg>
@@ -131,6 +135,7 @@
               </li>
               <li class="social__item">
                 <a class="social__link social__link--share focus" href="#">
+                  <span class="sr-only">with pinterest</span>
                   <svg class="social__icon" width="17" height="18">
                     <use xlink:href="images/sprite.svg#pinterest"></use>
                   </svg>
@@ -242,6 +247,7 @@
           </span>
           <ul class="social__list">
             <li class="social__item">
+              <span class="sr-only">Twitter</span>
               <a class="social__link social__link--share focus" href="#">
                 <svg class="social__icon" width="18" height="13">
                   <use xlink:href="images/sprite.svg#twitter"></use>
@@ -250,6 +256,7 @@
             </li>
             <li class="social__item">
               <a class="social__link social__link--share focus" href="#">
+                <span class="sr-only">facebook</span>
                 <svg class="social__icon" width="8" height="15">
                   <use xlink:href="images/sprite.svg#facebook"></use>
                 </svg>
@@ -284,6 +291,7 @@
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link focus" href="#">
+                <span class="sr-only">We're on facebook</span>
                 <svg class="social__icon" width="8" height="15">
                   <use xlink:href="images/sprite.svg#facebook"></use>
                 </svg>
@@ -291,6 +299,7 @@
             </li>
             <li class="social__item">
               <a class="social__link focus" href="#">
+                <span class="sr-only">We're on Twitter</span>
                 <svg class="social__icon" width="18" height="13">
                   <use xlink:href="images/sprite.svg#twitter"></use>
                 </svg>
@@ -298,6 +307,7 @@
             </li>
             <li class="social__item">
               <a class="social__link focus" href="#">
+                <span class="sr-only">We're on instagram</span>
                 <svg class="social__icon" width="15" height="15">
                   <use xlink:href="images/sprite.svg#instagram"></use>
                 </svg>
