--- a/app/post_aside.html
+++ b/app/post_aside.html
@@ -102,6 +102,7 @@
             <ul class="social__list">
               <li class="social__item">
                 <a class="social__link social__link--share focus" href="#">
+                  <span class="sr-only">with facebook</span>
                   <svg class="social__icon" width="8" height="15">
                     <use xlink:href="images/sprite.svg#facebook"></use>
                   </svg>
@@ -109,6 +110,7 @@
               </li>
               <li class="social__item">
                 <a class="social__link social__link--share focus" href="#">
+                  <span class="sr-only">with twitter</span>
                   <svg class="social__icon" width="18" height="13">
                     <use xlink:href="images/sprite.svg#twitter"></use>
                   </svg>
@@ -116,6 +118,7 @@
               </li>
               <li class="social__item">
                 <a class="social__link social__link--share focus" href="#">
+                  <span class="sr-only">with google +</span>
                   <svg class="social__icon" width="17" height="17">
                     <use xlink:href="images/sprite.svg#g+"></use>
                   </svg>
@@ -123,6 +126,7 @@
               </li>
               <li class="social__item">
                 <a class="social__link social__link--share focus" href="#">
+                  <span class="sr-only">with tumblr</span>
                   <svg class="social__icon" width="11" height="17">
                     <use xlink:href="images/sprite.svg#tumblr"></use>
                   </svg>
@@ -130,6 +134,7 @@
               </li>
               <li class="social__item">
                 <a class="social__link social__link--share focus" href="#">
+                  <span class="sr-only">with pinterest</span>
                   <svg class="social__icon" width="17" height="18">
                     <use xlink:href="images/sprite.svg#pinterest"></use>
                   </svg>
@@ -152,6 +157,7 @@
                 <ul class="social__list">
                   <li class="social__item">
                     <a class="social__link social__link--share focus" href="#">
+                      <span class="sr-only">I'm on facebook</span>
                       <svg class="social__icon" width="8" height="15">
                         <use xlink:href="images/sprite.svg#facebook"></use>
                       </svg>
@@ -159,6 +165,7 @@
                   </li>
                   <li class="social__item">
                     <a class="social__link social__link--share focus" href="#">
+                      <span class="sr-only">I'm on instagram</span>
                       <svg class="social__icon" width="15" height="15">
                         <use xlink:href="images/sprite.svg#instagram"></use>
                       </svg>
@@ -166,6 +173,7 @@
                   </li>
                   <li class="social__item">
                     <a class="social__link social__link--share focus" href="#">
+                      <span class="sr-only">I'm on pinterest</span>
                       <svg class="social__icon" width="17" height="18">
                         <use xlink:href="images/sprite.svg#pinterest"></use>
                       </svg>
@@ -326,6 +334,7 @@
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link social__link--share focus" href="#">
+                <span class="sr-only">Twitter</span>
                 <svg class="social__icon" width="18" height="13">
                   <use xlink:href="images/sprite.svg#twitter"></use>
                 </svg>
@@ -333,6 +342,7 @@
             </li>
             <li class="social__item">
               <a class="social__link social__link--share focus" href="#">
+                <span class="sr-only">facebook</span>
                 <svg class="social__icon" width="8" height="15">
                   <use xlink:href="images/sprite.svg#facebook"></use>
                 </svg>
@@ -367,6 +377,7 @@
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link focus" href="#">
+                <span class="sr-only">We're on facebook</span>
                 <svg class="social__icon" width="8" height="15">
                   <use xlink:href="images/sprite.svg#facebook"></use>
                 </svg>
@@ -374,6 +385,7 @@
             </li>
             <li class="social__item">
               <a class="social__link focus" href="#">
+                <span class="sr-only">We're on Twitter</span>
                 <svg class="social__icon" width="18" height="13">
                   <use xlink:href="images/sprite.svg#twitter"></use>
                 </svg>
@@ -381,6 +393,7 @@
             </li>
             <li class="social__item">
               <a class="social__link focus" href="#">
+                <span class="sr-only">We're on instagram</span>
                 <svg class="social__icon" width="15" height="15">
                   <use xlink:href="images/sprite.svg#instagram"></use>
                 </svg>
